apps/base/sfmc-new-flux-service/app-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sfmc-new-flux-service
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: sfmc-new-flux-service
  template:
    metadata:
    spec:
      containers:
        - name: sfmc-new-flux-service
          image: 860234270284.dkr.ecr.eu-west-1.amazonaws.com/sfmc-new-flux-service:dev-fe0876a-1634820169
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: svcport
              protocol: TCP
          resources:
            requests:
              memory: "100Mi"
              cpu: "20m"
            limits:
              memory: "200Mi"
