apps/base/sfmc-new-flux-service/app-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sfmc-new-flux-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      name: svcport
