apps/base/sfmc-new-flux-service/app-IngressRule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sfmc-new-flux-service
  annotations:
    kubernetes.io/ingress.class: nginx
